# CIC-ephemeris-parse

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/cic_data_parser/: __init__.py  cic_file.py
tests/: test_OEM.py  test_header.py
tests/ressources/: OEM_test.txt
