[project]
name = "cic-data-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nicolas Lequette", email = "nicolas.lequette@orange.fr" }
]
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.0.0",
    "numpy>=2.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "icecream>=2.1.4",
    "pytest>=8.3.4",
]
